Set revisionHistoryLimit to 2

--- a/k8s/casa/apps/cinewrax/cinewrax-cinewrax.yaml
+++ b/k8s/casa/apps/cinewrax/cinewrax-cinewrax.yaml
@@ -5,6 +5,7 @@ metadata:
   name: cinewrax-cinewrax
 spec:
   replicas: 1
+  revisionHistoryLimit: 2
   selector:
     matchLabels:
       deployment: cinewrax-cinewrax
