--- a/k8s/casa/apps/cinewrax/cinewrax-cinewrax.yaml
+++ b/k8s/casa/apps/cinewrax/cinewrax-cinewrax.yaml
@@ -27,6 +27,10 @@ spec:
           env:
             - name: DUMMY
               value: "0"
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 3000
 ---
 kind: Service
 apiVersion: v1
