Deploy macracoon external test app

--- a/k8s/casa/bootstrap/kustomization.yaml
+++ b/k8s/casa/bootstrap/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
   - apps/torrent-bot.yaml
   - apps/polyglot-bot.yaml
   - apps/cinewrax.yaml
+  - apps/macracoon.yaml
 #  - apps/superorder-me.yaml
 #  - apps/superorder-old.yaml
 
