--- a/k8s/casa/bootstrap/kustomization.yaml
+++ b/k8s/casa/bootstrap/kustomization.yaml
@@ -26,6 +26,7 @@ resources:
   - resources/external-endpoints.yaml
   - resources/transmission-rpc.yaml
   - resources/external-secrets.yaml
+  - resources/external-dns.yaml
 #  - resources/datadog.yaml
 
   # ArgoCD
