Change AWS SecretsManager region

--- a/k8s/casa/bootstrap/resources/external-secrets.yaml
+++ b/k8s/casa/bootstrap/resources/external-secrets.yaml
@@ -28,7 +28,7 @@ spec:
   provider:
     aws:
       service: SecretsManager
-      region: us-west-2
+      region: eu-central-1
       auth:
         secretRef:
           accessKeyIDSecretRef:
