--- a/k8s/casa/bootstrap/resources/external-dns.yaml
+++ b/k8s/casa/bootstrap/resources/external-dns.yaml
@@ -53,3 +53,38 @@ subjects:
   - kind: ServiceAccount
     name: external-dns
     namespace: default
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: external-dns
+spec:
+  strategy:
+    type: Recreate
+  selector:
+    matchLabels:
+      app: external-dns
+  template:
+    metadata:
+      labels:
+        app: external-dns
+    spec:
+      serviceAccountName: external-dns
+      containers:
+        - name: external-dns
+          image: registry.k8s.io/external-dns/external-dns:v0.14.2
+          args:
+            - --source=service
+            - --domain-filter=pyldin601.xyz
+            - --provider=cloudflare
+          env:
+            - name: CF_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: external-dns-credentials
+                  key: CF_API_KEY
+            - name: CF_API_EMAIL
+              valueFrom:
+                secretKeyRef:
+                  name: external-dns-credentials
+                  key: CF_API_EMAIL
