--- a/k8s/casa/bootstrap/resources/external-dns.yaml
+++ b/k8s/casa/bootstrap/resources/external-dns.yaml
@@ -74,7 +74,7 @@ spec:
         - name: external-dns
           image: registry.k8s.io/external-dns/external-dns:v0.14.2
           args:
-            - --source=service
+            - --source=ingress
             - --domain-filter=pyldin601.xyz
             - --provider=cloudflare
           env:
