--- a/k8s/casa/bootstrap/resources/external-dns.yaml
+++ b/k8s/casa/bootstrap/resources/external-dns.yaml
@@ -74,9 +74,12 @@ spec:
         - name: external-dns
           image: registry.k8s.io/external-dns/external-dns:v0.14.2
           args:
-            - --source=ingress
-            - --domain-filter=pyldin601.xyz
+            - --source=service # ingress is also possible
+            - --domain-filter=example.com # (optional) limit to only example.com domains; change to match the zone created above.
+            - --zone-id-filter=023e105f4ecef8ad9ca31a8372d0c353 # (optional) limit to a specific zone.
             - --provider=cloudflare
+            - --cloudflare-proxied # (optional) enable the proxy feature of Cloudflare (DDOS protection, CDN...)
+            - --cloudflare-dns-records-per-page=5000 # (optional) configure how many DNS records to fetch per request
           env:
             - name: CF_API_KEY
               valueFrom:
