--- a/k8s/casa/bootstrap/resources/external-dns.yaml
+++ b/k8s/casa/bootstrap/resources/external-dns.yaml
@@ -74,11 +74,8 @@ spec:
         - name: external-dns
           image: registry.k8s.io/external-dns/external-dns:v0.15.0
           args:
-            - --source=service # ingress is also possible
-            - --domain-filter=pyldin601.xyz # (optional) limit to only example.com domains; change to match the zone created above.
+            - --source=ingress
             - --provider=cloudflare
-            - --cloudflare-proxied # (optional) enable the proxy feature of Cloudflare (DDOS protection, CDN...)
-            - --cloudflare-dns-records-per-page=5000 # (optional) configure how many DNS records to fetch per request
           env:
             - name: CF_API_KEY
               valueFrom:
