Add davinciapps.pyldin601.xyz domain

--- a/k8s/casa/apps/macracoon/vm.yaml
+++ b/k8s/casa/apps/macracoon/vm.yaml
@@ -43,7 +43,7 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`davinciapps.pyldin601.dev`)
+      match: Host(`davinciapps.pyldin601.dev`) or Host(`davinciapps.pyldin601.xyz`)
       services:
         - kind: Service
           name: external-web
