--- a/k8s/casa/bootstrap/resources/external-dns.yaml
+++ b/k8s/casa/bootstrap/resources/external-dns.yaml
@@ -74,7 +74,7 @@ spec:
         - name: external-dns
           image: registry.k8s.io/external-dns/external-dns:v0.15.0
           args:
-            - --source=ingress
+            - --source=ingressroute
             - --provider=cloudflare
           env:
             - name: CF_API_TOKEN
