--- a/k8s/casa/bootstrap/resources/traefik-config.yaml
+++ b/k8s/casa/bootstrap/resources/traefik-config.yaml
@@ -13,3 +13,7 @@ spec:
       - "--serverstransport.insecureSkipVerify=true"
     persistence:
       enabled: true
+    providers:
+      kubernetesIngress:
+        publishedService:
+          enabled: true
