--- a/k8s/casa/bootstrap/resources/external-dns.yaml
+++ b/k8s/casa/bootstrap/resources/external-dns.yaml
@@ -76,6 +76,7 @@ spec:
           args:
             - --source=traefik-proxy
             - --provider=cloudflare
+            - --policy=sync
           env:
             - name: CF_API_TOKEN
               valueFrom:
