--- a/k8s/casa/bootstrap/resources/external-dns.yaml
+++ b/k8s/casa/bootstrap/resources/external-dns.yaml
@@ -26,6 +26,7 @@ apiVersion: batch/v1
 metadata:
   name: cloudflare-dns-records-sync
 spec:
+  successfulJobsHistoryLimit: 1
   schedule: "* * * * *"
   jobTemplate:
     spec:
