--- a/k8s/casa/bootstrap/resources/external-dns.yaml
+++ b/k8s/casa/bootstrap/resources/external-dns.yaml
@@ -50,7 +50,7 @@ spec:
                   RECORD_ID=3aa2cc0db5d9d426abeb17fbd3685df4
                   PUBLIC_IP=$(curl -s https://ipinfo.io/ip)
                   curl -X PUT "https://api.cloudflare.com/client/v4/zones/$ZONE_ID/dns_records/$RECORD_ID" \
-                       -H "Authorization: Bearer $API_TOKEN" \
+                       -H "Authentication: Bearer $CF_API_TOKEN" \
                        -H "Content-Type: application/json" \
                        --data "{\"type\":\"A\",\"name\":\"davinciapps.pyldin601.xyz\",\"content\":\"$PUBLIC_IP\",\"ttl\":120,\"proxied\":false}"
                   echo $PUBLIC_IP
