--- a/k8s/casa/bootstrap/resources/external-dns.yaml
+++ b/k8s/casa/bootstrap/resources/external-dns.yaml
@@ -51,6 +51,7 @@ spec:
                   PUBLIC_IP=$(curl -s https://ipinfo.io/ip)
                   curl -X PUT "https://api.cloudflare.com/client/v4/zones/$ZONE_ID/dns_records/$RECORD_ID" \
                        -H "Authentication: Bearer $CF_API_TOKEN" \
+                       -H "X-Auth-Email: $CF_API_EMAIL" \
                        -H "Content-Type: application/json" \
                        --data @- <<EOF
                           {
