--- a/k8s/casa/bootstrap/kustomization.yaml
+++ b/k8s/casa/bootstrap/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
   - apps/polyglot-bot.yaml
   - apps/cinewrax.yaml
   - apps/macracoon.yaml
+  - apps/mountpoint-s3-csi-driver.yaml
 #  - apps/superorder-me.yaml
 #  - apps/superorder-old.yaml
 
