--- a/k8s/casa/bootstrap/apps/mountpoint-s3-csi-driver.yaml
+++ b/k8s/casa/bootstrap/apps/mountpoint-s3-csi-driver.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: loki
+  name: mountpoint-s3-csi-driver
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
