--- a/k8s/casa/apps/macracoon/vm.yaml
+++ b/k8s/casa/apps/macracoon/vm.yaml
@@ -30,7 +30,32 @@ spec:
       protocol: TCP
       targetPort: 8081
       nodePort: 0
-  selector: {}
+---
+apiVersion: v1
+kind: Endpoints
+metadata:
+  name: prom-node-exporter
+  namespace: davinciapps
+subsets:
+  - addresses:
+      - ip: 192.168.1.240
+    ports:
+      - name: node-exporter
+        port: 9100
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: prom-node-exporter
+  namespace: davinciapps
+spec:
+  type: ClusterIP
+  ports:
+    - name: node-exporter
+      port: 9100
+      protocol: TCP
+      targetPort: 9100
+      nodePort: 0
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
