--- a/k8s/casa/bootstrap/apps/prometheus.yaml
+++ b/k8s/casa/bootstrap/apps/prometheus.yaml
@@ -22,7 +22,7 @@ spec:
           value: |
             - job_name: "vm-nodes"
               static_configs:
-                - targets: [ "192.168.1.240:9100" ]
+                - targets: [ "prom-node-exporter.davinciapps.src.cluster.local:9100" ]
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: default
