--- a/k8s/casa/bootstrap/resources/traefik-config.yaml
+++ b/k8s/casa/bootstrap/resources/traefik-config.yaml
@@ -13,3 +13,14 @@ spec:
       - "--serverstransport.insecureSkipVerify=true"
     persistence:
       enabled: true
+    plugins:
+      geoblock:
+        moduleName: "github.com/traefik/traefik-plugin-geoblock"
+        version: "v0.1.2"
+    middlewares:
+      geoblockMiddleware:
+        plugin:
+          geoblock:
+            denylist:
+              - "RU"
+            defaultPolicy: "allow"
