Enable norussiaMiddleware globally

--- a/k8s/casa/bootstrap/resources/traefik-config.yaml
+++ b/k8s/casa/bootstrap/resources/traefik-config.yaml
@@ -11,6 +11,7 @@ spec:
       - "--certificatesResolvers.default.acme.email=roman.lakhtadyr+certs@gmail.com"
       - "--certificatesResolvers.default.acme.storage=/data/acme.json"
       - "--serverstransport.insecureSkipVerify=true"
+      - "--entrypoints.websecure.http.middlewares=norussiaMiddleware@kubernetescrd"
     persistence:
       enabled: true
     plugins:
