--- a/k8s/casa/apps/myownradio/myownradio-server-ingressroute.yaml
+++ b/k8s/casa/apps/myownradio/myownradio-server-ingressroute.yaml
@@ -15,8 +15,8 @@ spec:
           name: myownradio-server
           port: http
           scheme: http
-      middlewares:
-        - name: norussiaMiddleware
-          namespace: kube-system
+#      middlewares:
+#        - name: norussiaMiddleware
+#          namespace: kube-system
   tls:
     certResolver: default
