Add `ingressRoute` parameter to `traefik` config

--- a/k8s/casa/bootstrap/resources/traefik-config.yaml
+++ b/k8s/casa/bootstrap/resources/traefik-config.yaml
@@ -13,6 +13,9 @@ spec:
       - "--serverstransport.insecureSkipVerify=true"
     persistence:
       enabled: true
+    ingressRoute:
+      dashboard:
+        enabled: true
     plugins:
       geoblock:
         moduleName: "github.com/traefik/traefik-plugin-geoblock"
