macracoon: Switch to ClusterSecretStore

--- a/k8s/casa/apps/macracoon/externalsecret.yaml
+++ b/k8s/casa/apps/macracoon/externalsecret.yaml
@@ -8,7 +8,7 @@ spec:
   refreshInterval: 1h
   secretStoreRef:
     name: external-secretstore
-    kind: SecretStore
+    kind: ClusterSecretStore
   target:
     name: mysql-credentials
     creationPolicy: Owner
