--- a/k8s/casa/bootstrap/resources/external-secrets.yaml
+++ b/k8s/casa/bootstrap/resources/external-secrets.yaml
@@ -52,6 +52,8 @@ spec:
           accessKeyIDSecretRef:
             name: awssm-secret
             key: access-key
+            namespace: default
           secretAccessKeySecretRef:
             name: awssm-secret
             key: secret-access-key
+            namespace: default
