--- a/k8s/casa/bootstrap/resources/external-dns.yaml
+++ b/k8s/casa/bootstrap/resources/external-dns.yaml
@@ -7,7 +7,7 @@ spec:
   refreshInterval: 1h
   secretStoreRef:
     name: external-secretstore
-    kind: SecretStore
+    kind: ClusterSecretStore
   target:
     name: cloudflare-credentials
     creationPolicy: Owner
