--- a/k8s/casa/apps/macracoon/vm.yaml
+++ b/k8s/casa/apps/macracoon/vm.yaml
@@ -17,6 +17,8 @@ subsets:
     ports:
       - name: http
         port: 8081
+      - name: mysql
+        port: 3306
 ---
 apiVersion: v1
 kind: Service
@@ -29,6 +31,19 @@ spec:
       port: 8081
       protocol: TCP
       targetPort: 8081
+      nodePort: 0
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mysql
+  namespace: davinciapps
+spec:
+  ports:
+    - name: http
+      port: 3306
+      protocol: TCP
+      targetPort: 3306
       nodePort: 0
 ---
 apiVersion: traefik.containo.us/v1alpha1
