macracoon: Create ExternalSecret for Github credentials

--- a/k8s/casa/apps/macracoon/externalsecret.yaml
+++ b/k8s/casa/apps/macracoon/externalsecret.yaml
@@ -21,3 +21,22 @@ spec:
       remoteRef:
         key: prod/Macracoon/Mysql
         property: password
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: github-credentials
+  namespace: davinciapps
+spec:
+  refreshInterval: 1h
+  secretStoreRef:
+    name: external-secretstore
+    kind: ClusterSecretStore
+  target:
+    name: github-credentials
+    creationPolicy: Owner
+  data:
+    - secretKey: token
+      remoteRef:
+        key: prod/Macracoon/Github
+        property: token
