--- a/k8s/casa/apps/macracoon/vm.yaml
+++ b/k8s/casa/apps/macracoon/vm.yaml
@@ -17,8 +17,8 @@ subsets:
     ports:
       - name: http
         port: 8081
-      - name: mysql
-        port: 3306
+#      - name: mysql
+#        port: 3306
 ---
 apiVersion: v1
 kind: Service
