--- a/k8s/casa/apps/macracoon/vm.yaml
+++ b/k8s/casa/apps/macracoon/vm.yaml
@@ -17,8 +17,6 @@ subsets:
     ports:
       - name: http
         port: 8081
-#      - name: mysql
-#        port: 3306
 ---
 apiVersion: v1
 kind: Service
@@ -32,6 +30,18 @@ spec:
       protocol: TCP
       targetPort: 8081
       nodePort: 0
+---
+apiVersion: v1
+kind: Endpoints
+metadata:
+  name: mysql
+  namespace: davinciapps
+subsets:
+  - addresses:
+      - ip: 192.168.1.240
+    ports:
+      - name: mysql
+        port: 3306
 ---
 apiVersion: v1
 kind: Service
