--- a/k8s/casa/apps/macracoon/vm.yaml
+++ b/k8s/casa/apps/macracoon/vm.yaml
@@ -50,7 +50,7 @@ metadata:
   namespace: davinciapps
 spec:
   ports:
-    - name: http
+    - name: mysql
       port: 3306
       protocol: TCP
       targetPort: 3306
