macracoon: Ping internal-mysql.davinciapps.svc.cluster.local

--- a/k8s/casa/apps/macracoon/mysql-backup.yaml
+++ b/k8s/casa/apps/macracoon/mysql-backup.yaml
@@ -18,8 +18,8 @@ spec:
         - name: alpine
           image: alpine:3.18
           command:
-            - sleep
-            - infinity
+            - ping
+            - internal-mysql.davinciapps.svc.cluster.local
 ---
 kind: CronJob
 apiVersion: batch/v1
