--- a/k8s/casa/apps/macracoon/vm.yaml
+++ b/k8s/casa/apps/macracoon/vm.yaml
@@ -39,8 +39,7 @@ subsets:
   - addresses:
       - ip: 192.168.1.240
     ports:
-      - name: mysql
-        port: 3306
+      - port: 3306
 ---
 apiVersion: v1
 kind: Service
@@ -52,7 +51,6 @@ spec:
     - name: mysql
       port: 3306
       protocol: TCP
-      targetPort: 3306
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
