--- a/k8s/casa/apps/macracoon/vm.yaml
+++ b/k8s/casa/apps/macracoon/vm.yaml
@@ -39,7 +39,8 @@ subsets:
   - addresses:
       - ip: 192.168.1.240
     ports:
-      - port: 3306
+      - name: mysql
+        port: 3306
 ---
 apiVersion: v1
 kind: Service
