--- a/k8s/casa/apps/macracoon/vm.yaml
+++ b/k8s/casa/apps/macracoon/vm.yaml
@@ -31,23 +31,14 @@ spec:
       targetPort: 8081
 ---
 apiVersion: v1
-kind: Endpoints
-metadata:
-  name: internal-mysql
-  namespace: davinciapps
-subsets:
-  - addresses:
-      - ip: 192.168.1.240
-    ports:
-      - name: mysql
-        port: 3306
----
-apiVersion: v1
 kind: Service
 metadata:
   name: internal-mysql
   namespace: davinciapps
 spec:
+  type: ExternalName
+  externalIPs:
+    - 192.168.1.240
   ports:
     - name: mysql
       port: 3306
