--- a/k8s/casa/apps/macracoon/mysql-backup.yaml
+++ b/k8s/casa/apps/macracoon/mysql-backup.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   successfulJobsHistoryLimit: 2
   failedJobsHistoryLimit: 0
-  schedule: "31 18 * * *"
+  schedule: "34 18 * * *"
   jobTemplate:
     spec:
       template:
@@ -17,7 +17,7 @@ spec:
               image: alpine:3.18
               env:
               - name: MYSQL_HOST
-                value: internal-mysql.davinciapps.svc.cluster.local
+                value: 192.168.1.240
               - name: MYSQL_DB
                 value: macracoon
               - name: MYSQL_USER
