--- a/k8s/casa/apps/macracoon/mysql-backup.yaml
+++ b/k8s/casa/apps/macracoon/mysql-backup.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   successfulJobsHistoryLimit: 2
   failedJobsHistoryLimit: 0
-  schedule: "0 12 * * *"
+  schedule: "20 19 * * *"
   jobTemplate:
     spec:
       template:
@@ -44,7 +44,7 @@ spec:
                   git clone https://pyldin601:"$GITHUB_TOKEN"@github.com/pyldin601/servers-backups.git &&
                   mkdir -p servers-backups/database/macracoon &&
                   cd servers-backups/database/macracoon &&
-                  mysqldump --no-create-info --no-tablespaces -h$MYSQL_HOST -u$MYSQL_USER -p$MYSQL_PASSWORD $MYSQL_DB > macracoon_backup.sql &&
+                  mysqldump --no-create-info --no-tablespaces --skip-dump-date -h$MYSQL_HOST -u$MYSQL_USER -p$MYSQL_PASSWORD $MYSQL_DB > macracoon_backup.sql &&
                   git add macracoon_backup.sql &&
                   git commit -m "Macracoon Database Backup" &&
                   git push &&
