--- a/k8s/casa/apps/macracoon/vm.yaml
+++ b/k8s/casa/apps/macracoon/vm.yaml
@@ -39,7 +39,7 @@ subsets:
   - addresses:
       - ip: 192.168.1.240
     ports:
-      - name: mysql
+      - name: other
         port: 33066
 ---
 apiVersion: v1
@@ -49,7 +49,7 @@ metadata:
   namespace: davinciapps
 spec:
   ports:
-    - name: mysql
+    - name: other
       port: 33066
       protocol: TCP
 ---
