--- a/k8s/casa/apps/macracoon/vm.yaml
+++ b/k8s/casa/apps/macracoon/vm.yaml
@@ -31,16 +31,18 @@ spec:
       targetPort: 8081
 ---
 apiVersion: v1
-kind: Endpoints
+kind: EndpointSlice
 metadata:
   name: internal-mysql
   namespace: davinciapps
-subsets:
+addressType: IPv4
+ports:
+  - name: mysql
+    port: 3306
+    protocol: TCP
+endpoints:
   - addresses:
-      - ip: 192.168.1.240
-    ports:
-      - name: other
-        port: 33066
+      - 192.168.1.240
 ---
 apiVersion: v1
 kind: Service
@@ -49,8 +51,8 @@ metadata:
   namespace: davinciapps
 spec:
   ports:
-    - name: other
-      port: 33066
+    - name: mysql
+      port: 3306
       protocol: TCP
 ---
 apiVersion: traefik.containo.us/v1alpha1
