--- a/k8s/casa/apps/macracoon/vm.yaml
+++ b/k8s/casa/apps/macracoon/vm.yaml
@@ -30,7 +30,7 @@ spec:
       protocol: TCP
       targetPort: 8081
 ---
-apiVersion: v1
+apiVersion: discovery.k8s.io/v1
 kind: EndpointSlice
 metadata:
   name: internal-mysql
