macracoon: Try making internal-mysql headless

--- a/k8s/casa/apps/macracoon/vm.yaml
+++ b/k8s/casa/apps/macracoon/vm.yaml
@@ -51,6 +51,7 @@ metadata:
   name: internal-mysql
   namespace: davinciapps
 spec:
+  clusterIP: None
   ports:
     - name: mysql
       port: 3306
