macracoon: Restore nodePort and Endpoints

--- a/k8s/casa/apps/macracoon/vm.yaml
+++ b/k8s/casa/apps/macracoon/vm.yaml
@@ -29,20 +29,17 @@ spec:
       port: 8081
       protocol: TCP
 ---
-apiVersion: discovery.k8s.io/v1
-kind: EndpointSlice
+apiVersion: v1
+kind: Endpoints
 metadata:
   name: internal-mysql
   namespace: davinciapps
-addressType: IPv4
-ports:
-  - name: mysql
-    port: 3306
-    protocol: TCP
-endpoints:
+subsets:
   - addresses:
-      - 192.168.1.240
-    conditions: {}
+      - ip: 192.168.1.240
+    ports:
+      - name: mysql
+        port: 3306
 ---
 apiVersion: v1
 kind: Service
@@ -50,11 +47,12 @@ metadata:
   name: internal-mysql
   namespace: davinciapps
 spec:
-  selector: {}
+#  selector: {}
   ports:
     - name: mysql
       port: 3306
       protocol: TCP
+      nodePort: 0
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
