--- a/k8s/casa/apps/macracoon/vm.yaml
+++ b/k8s/casa/apps/macracoon/vm.yaml
@@ -47,7 +47,7 @@ metadata:
   name: internal-mysql
   namespace: davinciapps
 spec:
-#  selector: {}
+  selector: {}
   ports:
     - name: mysql
       port: 3306
