macracoon: Set targetPort

--- a/k8s/casa/apps/macracoon/vm.yaml
+++ b/k8s/casa/apps/macracoon/vm.yaml
@@ -52,6 +52,7 @@ spec:
     - name: mysql
       port: 3306
       protocol: TCP
+      targetPort: 3306
       nodePort: 0
 ---
 apiVersion: traefik.containo.us/v1alpha1
