--- a/k8s/casa/apps/macracoon/vm.yaml
+++ b/k8s/casa/apps/macracoon/vm.yaml
@@ -24,10 +24,13 @@ metadata:
   name: external-web
   namespace: davinciapps
 spec:
+  selector: {}
   ports:
     - name: http
       port: 8081
+      targetPort: 8081
       protocol: TCP
+      nodePort: 0
 ---
 apiVersion: v1
 kind: Endpoints
