--- a/k8s/casa/apps/macracoon/vm.yaml
+++ b/k8s/casa/apps/macracoon/vm.yaml
@@ -30,17 +30,18 @@ spec:
       port: 8081
       protocol: TCP
 ---
-apiVersion: v1
-kind: Endpoints
+apiVersion: discovery.k8s.io/v1
+kind: EndpointSlice
 metadata:
   name: internal-mysql
   namespace: davinciapps
-subsets:
+addressType: IPv4
+endpoints:
   - addresses:
-      - ip: 192.168.1.240
-    ports:
-      - name: mysql
-        port: 3306
+      - 192.168.1.240
+ports:
+  - name: mysql
+    port: 3306
 ---
 apiVersion: v1
 kind: Service
