--- a/k8s/casa/apps/macracoon/vm.yaml
+++ b/k8s/casa/apps/macracoon/vm.yaml
@@ -6,17 +6,19 @@ metadata:
   labels:
     name: davinciapps
 ---
-apiVersion: v1
-kind: Endpoints
+apiVersion: discovery.k8s.io/v1
+kind: EndpointSlice
 metadata:
   name: external-web
   namespace: davinciapps
-subsets:
+addressType: IPv4
+endpoints:
   - addresses:
-      - ip: 192.168.1.240
-    ports:
-      - name: http
-        port: 8081
+      - 192.168.1.240
+    conditions: {}
+ports:
+  - name: http
+    port: 8081
 ---
 apiVersion: v1
 kind: Service
