--- a/k8s/casa/apps/macracoon/vm.yaml
+++ b/k8s/casa/apps/macracoon/vm.yaml
@@ -69,7 +69,7 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`davinciapps.pyldin601.dev`) || Host(`davinciapps.pyldin601.xyz`) || Host(`davinciapps.com`)  || Host(`www.davinciapps.com`)
+      match: Host(`davinciapps.com`)  || Host(`www.davinciapps.com`)
       services:
         - kind: Service
           name: external-web
