--- a/k8s/casa/apps/myownradio/mysql-database-backup.yaml
+++ b/k8s/casa/apps/myownradio/mysql-database-backup.yaml
@@ -1,4 +1,22 @@
 ---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: github-credentials
+spec:
+  refreshInterval: 1h
+  secretStoreRef:
+    name: external-secretstore
+    kind: ClusterSecretStore
+  target:
+    name: github-credentials
+    creationPolicy: Owner
+  data:
+    - secretKey: token
+      remoteRef:
+        key: prod/Radioterio/Github
+        property: token
+---
 kind: CronJob
 apiVersion: batch/v1
 metadata:
@@ -36,7 +54,7 @@ spec:
               - name: GITHUB_TOKEN
                 valueFrom:
                   secretKeyRef:
-                    name: github-token
+                    name: github-credentials
                     key: token
               command: ["/bin/sh", "-c"]
               args:
