--- a/k8s/casa/bootstrap/kustomization.yaml
+++ b/k8s/casa/bootstrap/kustomization.yaml
@@ -27,6 +27,7 @@ resources:
   - resources/transmission-rpc.yaml
   - resources/external-secrets.yaml
   - resources/external-dns.yaml
+  - resources/datadog.yaml
 
   # ArgoCD
   - argocd/argocd-server-ingressroute.yaml
