--- a/k8s/casa/apps/musicloud/kustomization.yaml
+++ b/k8s/casa/apps/musicloud/kustomization.yaml
@@ -22,3 +22,4 @@ resources:
   - musicloud-server-pvc.yaml
   - musicloud-server-service.yaml
   - musicloud-ignressroute.yaml
+  - musicloud-externalsecret.yaml
