chore: pyldin601.dev -> pyldin601.xyz

--- a/k8s/casa/apps/cinewrax/cinewrax-cinewrax.yaml
+++ b/k8s/casa/apps/cinewrax/cinewrax-cinewrax.yaml
@@ -55,7 +55,7 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`cw.pyldin601.dev`)
+      match: Host(`cw.pyldin601.xyz`)
       middlewares: []
       services:
         - kind: Service
