--- a/k8s/casa/apps/myownradio/kustomization.yaml
+++ b/k8s/casa/apps/myownradio/kustomization.yaml
@@ -38,7 +38,7 @@ resources:
   # server
   - myownradio-server-deployment.yaml
   - myownradio-server-service.yaml
-#  - myownradio-server-ingressroute.yaml
+  - myownradio-server-ingressroute.yaml
   - myownradio-server-pvc.yaml
   - myownradio-server-configmap.yaml
   - myownradio-server-sealedsecret.yaml
