torrent-bot: add memory limits for the transmission-daemon container

--- a/k8s/casa/apps/torrent-bot/transmission-daemon.yaml
+++ b/k8s/casa/apps/torrent-bot/transmission-daemon.yaml
@@ -41,6 +41,11 @@ spec:
       containers:
         - name: transmission-daemon
           image: haugene/transmission-openvpn
+          resources:
+            requests:
+              memory: "500Mi"
+            limits:
+              memory: "1500Mi"
           securityContext:
             capabilities:
               add:
