myownradio: install radiomanager-mobile-fe

--- a/k8s/casa/apps/myownradio/kustomization.yaml
+++ b/k8s/casa/apps/myownradio/kustomization.yaml
@@ -60,6 +60,7 @@ resources:
 
   # radiomanager-frontend
   - radiomanager-frontend.yaml
+  - radiomanager-mobile-fe.yaml
 
   # channel-bot
   - myownradio-channel-bot-sealedsecret.yaml
