macracoon: enable app

--- a/k8s/casa/bootstrap/kustomization.yaml
+++ b/k8s/casa/bootstrap/kustomization.yaml
@@ -11,7 +11,7 @@ resources:
   - apps/torrent-bot.yaml
   - apps/polyglot-bot.yaml
   - apps/cinewrax.yaml
-#  - apps/macracoon.yaml
+  - apps/macracoon.yaml
   - apps/mountpoint-s3-csi-driver.yaml
 #  - apps/superorder-me.yaml
 #  - apps/superorder-old.yaml
