--- a/k8s/casa/apps/macracoon/vm.yaml
+++ b/k8s/casa/apps/macracoon/vm.yaml
@@ -6,22 +6,17 @@ metadata:
   labels:
     name: davinciapps
 ---
-apiVersion: discovery.k8s.io/v1
-kind: EndpointSlice
+apiVersion: v1
+kind: Endpoints
 metadata:
   name: external-web
   namespace: davinciapps
-  labels:
-    kubernetes.io/service-name: external-web
-addressType: IPv4
-endpoints:
-  - addresses:
-      - 192.168.0.240
-    conditions:
-      ready: true
-ports:
-  - name: http
-    port: 8081
+subsets:
+- addresses:
+    - ip: 192.168.0.240
+  ports:
+    - name: http
+      port: 8081
 ---
 apiVersion: v1
 kind: Service
