--- a/k8s/casa/apps/macracoon/vm.yaml
+++ b/k8s/casa/apps/macracoon/vm.yaml
@@ -30,22 +30,17 @@ spec:
       port: 8081
       protocol: TCP
 ---
-apiVersion: discovery.k8s.io/v1
-kind: EndpointSlice
+apiVersion: v1
+kind: Endpoints
 metadata:
   name: internal-mysql
   namespace: davinciapps
-  labels:
-    kubernetes.io/service-name: internal-mysql
-addressType: IPv4
-endpoints:
+subsets:
   - addresses:
-      - 192.168.0.240
-    conditions:
-      ready: true
-ports:
-  - name: mysql
-    port: 3306
+      - ip: 192.168.0.240
+    ports:
+       - name: mysql
+         port: 3306
 ---
 apiVersion: v1
 kind: Service
