--- a/k8s/casa/bootstrap/kustomization.yaml
+++ b/k8s/casa/bootstrap/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
   - apps/cinewrax.yaml
   - apps/macracoon.yaml
   - apps/mountpoint-s3-csi-driver.yaml
+  - apps/radioterio.yaml
 #  - apps/superorder-me.yaml
 #  - apps/superorder-old.yaml
 
