radioterio: update api-server and deploy playback-server

--- a/k8s/casa/apps/radioterio/kustomization.yaml
+++ b/k8s/casa/apps/radioterio/kustomization.yaml
@@ -6,7 +6,13 @@ metadata:
 
 resources:
   - ns.yaml
+
   - api-server-deployment.yaml
   - api-server-externalsecret.yaml
   - api-server-ingressroute.yaml
   - api-server-service.yaml
+
+  - playback-server-deployment.yaml
+  - playback-server-externalsecret.yaml
+  - playback-server-ingressroute.yaml
+  - playback-server-service.yaml
