--- a/k8s/casa/apps/radioterio/playback-server-deployment.yaml
+++ b/k8s/casa/apps/radioterio/playback-server-deployment.yaml
@@ -29,6 +29,8 @@ spec:
           env:
             - name: PORT
               value: '8080'
+            - name: API_SERVER_URL
+              value: http://api-server.radioterio.svc.cluster.local:8080
             - name: JWT_SECRET
               valueFrom:
                 secretKeyRef:
