radioterio: deploy ted irens's stream

--- a/k8s/casa/apps/radioterio/kustomization.yaml
+++ b/k8s/casa/apps/radioterio/kustomization.yaml
@@ -16,3 +16,5 @@ resources:
   - playback-server-externalsecret.yaml
   - playback-server-ingressroute.yaml
   - playback-server-service.yaml
+
+  - ted-irens-rtmp-encoder.yaml
