radioterio: set resources for ted irens's stream

--- a/k8s/casa/apps/radioterio/ted-irens-rtmp-encoder.yaml
+++ b/k8s/casa/apps/radioterio/ted-irens-rtmp-encoder.yaml
@@ -47,8 +47,11 @@ spec:
               mountPath: /dev/dri
           resources:
             requests:
+              memory: "512Mi"
+              cpu: "500m"
+            limits:
               memory: "1024Mi"
-              cpu: "1000m"
+              cpu: "1500m"
           env:
             - name: USER_ID
               value: '1'
