--- a/k8s/casa/apps/radioterio/ted-irens-rtmp-encoder.yaml
+++ b/k8s/casa/apps/radioterio/ted-irens-rtmp-encoder.yaml
@@ -28,6 +28,8 @@ metadata:
   name: ted-irens-rtmp-encoder
 spec:
   replicas: 1
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       deployment: ted-irens-rtmp-encoder
