--- a/k8s/casa/apps/radioterio/frontend-deployment.yaml
+++ b/k8s/casa/apps/radioterio/frontend-deployment.yaml
@@ -25,6 +25,6 @@ spec:
               cpu: "600m"
           env:
             - name: NEXT_PUBLIC_API_SERVER_URL
-              value: http://api-server.radioterio.svc.cluster.local:8080
+              value: https://radioter.io/api-v2
             - name: NEXT_PUBLIC_PLAYBACK_SERVER_URL
-              value: http://api-server.radioterio.svc.cluster.local:8080/pb
+              value: https://radioter.io/pb
